--- a/desafios/curso/d012/estilo/style.css
+++ b/desafios/curso/d012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2? family= Passion+One:wght@400;700;900 & display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family= Finger +Paint & display=swap');
+
+
+:root{
+    --font01: Verdana, Geneva, Tahoma, sans-serif;
+    --font02: 'Passion One', cursive;
+    --font03:  'Finger Paint', cursiva;
+}
 * {
     margin: 0%;
     padding: 0%;
@@ -8,6 +18,7 @@
 html, body { 
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font01);
 }
 
 header {
@@ -19,10 +30,13 @@ header {
 header h1  {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font02);
+    font-size: 5vw;
 }
 
 header p  {
     padding-bottom: 50px;
+   
 }
 
 a  {
@@ -39,7 +53,13 @@ section {
     padding-left: 30px;
     padding-top: 10vh;
     padding-bottom: 10vh;
+    font-family: var(--font02);
+    font-size: 3.5vw;
 
+}
+
+section > p {
+    padding-bottom: 3em;
 }
 
 .normal {
@@ -50,10 +70,34 @@ section {
 .imagem {
     background-color: rgb(54, 54, 54);
     color: white;
+    box-shadow: inset 5px 5px 10px 0 rgba(0, 0, 0, 0.507);
 }
 
 section.imagem > p {
-    width: 300px;
+    padding: 10px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.342);
+    text-shadow: 2px 2px 0px black;
     
+}
+
+#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: black;
+    color: white;
 }
