--- a/desafios/100 desafios/ds05/estilo/style.css
+++ b/desafios/100 desafios/ds05/estilo/style.css
@@ -110,5 +110,19 @@ section a:hover {
 }
 
 footer {
-    padding-top: 300px;
+    background-color: var(--cor01);
+    text-align: center;
+    padding: 5px;
+    margin-top: 200px;
+    color: white;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: rgb(165, 165, 165);
 }
