--- a/desafios/curso/d014/estilo/style.css
+++ b/desafios/curso/d014/estilo/style.css
@@ -34,3 +34,27 @@ main {
     background-image: url('../imagens/frame-iphone.png');
     background-repeat: no-repeat;
 }
+
+#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+    
+}
+
+#redes-sociais img {
+    width: 50px;
+    margin: 15px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.63);
+    box-sizing: border-box;
+}
+
+#redes-sociais img:hover {
+    border: 2px solid white;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.692);
+    transition: .3s, border .5s ;
+}
