--- a/Exerci/ex026/mq02/estilo/style.css
+++ b/Exerci/ex026/mq02/estilo/style.css
@@ -17,6 +17,8 @@ html, body {
     width: 100vw;
     height: 100vh;
     background-color: var(--cor02);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 h1 {
