--- a/Exerci/ex026/mq02/estilo/retrato.css
+++ b/Exerci/ex026/mq02/estilo/retrato.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
-/*estilo para o retrato*/
+/*estilo para a retrato*/
 
 body {
-    background-color: yellow;
+   background-image: url('../imagens/cev-portrait.jpg');
+
 }
