--- a/desafios/curso/d015/estilo/style.css
+++ b/desafios/curso/d015/estilo/style.css
@@ -11,6 +11,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -36,6 +37,8 @@ main {
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(2, 2, 2, 0.349);
+    transition: width .3s, heigth .3s;
+    transition-timing-function: ease;
 }
 
 #imagem {
