--- a/desafios/curso/d015/estilo/media-query.css
+++ b/desafios/curso/d015/estilo/media-query.css
@@ -11,6 +11,7 @@
         width: 40%;
         height: 100%;
         float: left;
+        background-position: left center;
     }
 
     #formulario {
