--- a/desafios/curso/d015/estilo/style.css
+++ b/desafios/curso/d015/estilo/style.css
@@ -33,7 +33,7 @@ main {
     transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 510px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(2, 2, 2, 0.349);
@@ -54,4 +54,61 @@ main {
 #formulario {
     display: block;
     padding: 10px;
+}
+
+#formulario h1 {
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+#formulario p {
+    margin-bottom: 5px;
+}
+
+.campo {
+    background-color: var(--cor03);
+    border-radius: 5px;
+    margin: 5px;
+    padding: 5px;
+}
+
+label {
+    display: none;
+}
+
+input[type=submit] {
+    display: block;
+    width: 100%;
+    height: 40px;
+    background-color: var(--cor02);
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.473);
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: var(--cor01);
+}
+
+.botao {
+    margin-top: 10px;
+    padding: 5px 5px 10px 5px;  
+    display: block;
+    background-color: var(--cor03);
+    text-align: center;
+    text-decoration: none;
+    color: var(--cor01);
+    font-weight: bold;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.24);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.473);
+
+}
+
+.botao:hover {
+    background-color: var(--cor01);
+    color: white;
 }
