--- a/desafios/100 desafios/ds15/estilo/style.css
+++ b/desafios/100 desafios/ds15/estilo/style.css
@@ -32,11 +32,51 @@ body {
 
 #botao-close {
     display: none;
-}
+    position: relative;
+    top: -18px;
+    left: 400px;
+    cursor: pointer;}
 
 #menu {
-    display: none;
+    width: 150px;
+    background-color: blue;
+    display: block;
+    padding: 10px;
+    text-align: center;
+    position: relative;
+    top: -20px;
+    left: 230px;
 }
+
+#menu a {
+    position: relative;
+    color:#ffffff; 
+    text-decoration: none;
+   
+  }
+
+#menu li {
+    list-style: none;
+    margin-bottom: 20px;
+}
+  
+#menu a::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
+  }
+
+#menu a:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+  }
 
 header {
     height: 150px;
