desafio novo preciso termina

--- a/desafios/100 desafios/ds17 conselhos/estilo/style.css
+++ b/desafios/100 desafios/ds17 conselhos/estilo/style.css
@@ -38,6 +38,13 @@ button:hover {
     background-color: #0056b3;
 }
 
+.hidden {
+    display: none;
+    background-color: white;
+}
+
+
+
 #adviceContainer {
     color: #fff;
 }
