--- a/SASS/aula05/estilo/button.scss
+++ b/SASS/aula05/estilo/button.scss
@@ -12,7 +12,9 @@
 @mixin button-styles($backgrond, $color){
     background: $backgrond;
     color: $color;
-   
+    &:hover {
+        background: darken($backgrond, 15%)
+    }
 }
 
 .btn-cor01 {
