--- a/SASS/projeto/estilo/SASS/footer.scss
+++ b/SASS/projeto/estilo/SASS/footer.scss
@@ -9,6 +9,6 @@ footer ul > li {
 }
 
 footer ul > li:hover {
-    background-color: rgba(125, 159, 252, 0.493);
+    background-color: $cor01;
     transition: .5s;
 }
