--- a/SASS/projeto/estilo/SASS/booststrap.scss
+++ b/SASS/projeto/estilo/SASS/booststrap.scss
@@ -1,6 +1,5 @@
 * {
     margin: 0;
-    border-style: 0;
     padding: 0;
     font-size: 97%;
     font-weight: bold;
@@ -11,7 +10,7 @@
  
 body {
     background-color: $cor04;
-    background-image: url("../../img/bolha-background.png");
+    background-image: url("../../estilo/img/bolha-background.png");
     background-repeat: no-repeat;
     background-position: left center;
     background-attachment: fixed;
