--- a/SASS/projeto/estilo/SASS/header.scss
+++ b/SASS/projeto/estilo/SASS/header.scss
@@ -4,29 +4,30 @@ header {
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 5em;
-}
 
-nav > ul{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    list-style: none;
-}
+    nav {
+        ul {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            list-style: none;
 
-nav > ul > li {
-    margin-top: 2em;
-    margin-right: 1.5em;
-}
+            li {
+                margin-top: 2em;
+                margin-right: 1.5em;
 
-nav > ul > li > a {
-    text-decoration: none;
-    color: $cor02;
-    font-size: 1.2em;
-}
-
-nav > ul > li > a:hover {
-    color: $cor01;
-    padding: .8em .5em;
-    border-bottom: 1px solid $cor01;
-    transition: .3s;
+                a {
+                    text-decoration: none;
+                    color: $cor02;
+                    font-size: 1.2em;
+                    &:hover {
+                        color: $cor01;
+                        padding: .8em .5em;
+                        border-bottom: 1px solid $cor01;
+                        transition: .3s;
+                    }
+                }
+            }
+        }
+    }
 }
