add css no menu de navegação

--- a/desafios/100 desafios/ds26 site de vendas/assets/scss/style.scss
+++ b/desafios/100 desafios/ds26 site de vendas/assets/scss/style.scss
@@ -8,5 +8,6 @@
 @import"./config.scss";
 //components
 @import "./header.scss";
+@import"./navProdutos.scss";
 //franewor
 @import "./bootstrap.min.scss";
