--- a/desafios/100 desafios/ds28/css/style.css
+++ b/desafios/100 desafios/ds28/css/style.css
@@ -38,7 +38,7 @@ header h1 {
 .menu-openner {
     margin-right: 15px;
     font-size: 26px;
-    background-color: #ef9a9a;
+    background-color: #fff;
     padding: 5px 20px;
     border-radius: 5px;
     cursor: pointer;
@@ -68,6 +68,7 @@ aside.show {
 }
 
 .cart--area {
+    margin-top: 2.5em;
     padding:20px;
 }
 
@@ -155,7 +156,6 @@ h1, h2 {
     color:#555;
     margin-top:10px;
 }
-
 .pizzaWindowArea {
     position:fixed;
     left:0;
